# sd23-testing-mand1

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Test_Partitons.md  alembic.ini  pyproject.toml  restructuredtext_lint-1.4.0-py3-none-any.whl  sonar-project.properties  tox.ini
.github/workflows/: tests.yml
data_faker/: __init__.py  __main__.py  conftest.py  constants.py  logging.py  malthe.py  martin.py  settings.py
data_faker/db/: base.py  db_utils.py  enums.py  factories.py  mo_utils.py  utils.py  utils_malthe.py
data_faker/db/dao/: address_dao.py  dummy_dao.py  user_dao.py
data_faker/db/migrations/: env.py
data_faker/db/migrations/versions/: 2023-10-16-07-47_38b9cff47cdb.py  2023-10-16-08-32_39fe49db4fe4.py  2023-10-17-12-00_91f673ca220c.py
data_faker/db/models/: __init__.py  dummy_model.py  models.py
data_faker/services/: __init__.py
data_faker/tests/: __init__.py  test_address.py  test_door.py  test_dummy.py  test_floor.py  test_generate_number.py  test_name.py  test_phone_number.py  test_postal_code_and_town.py  test_street.py
data_faker/tests/integration_tests/: test_address_factory.py  test_name.py  test_postal_code_and_town.py
data_faker/tests/integration_tests/faker/: test_get_batch.py  test_get_single.py
data_faker/tests/unit_tests/: test_address_factory.py  test_cpr.py  test_dob.py  test_door.py  test_floor.py  test_generate_number.py  test_phone_number.py  test_street.py
data_faker/web/: __init__.py  application.py  lifetime.py
data_faker/web/api/: __init__.py  router.py
data_faker/web/api/docs/: __init__.py
data_faker/web/api/dummy/: __init__.py  views.py
data_faker/web/api/echo/: __init__.py  views.py
data_faker/web/api/faker/: __init__.py  views.py
data_faker/web/api/monitoring/: __init__.py
data_faker/web/api/users/: __init__.py  views.py
data_faker/web/dtos/: address_dto.py  fake_info_dto.py  person_info_dto.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
input_files/: addresses.sql
